Adding a modal and rendering a Map with Google Maps

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -29,8 +29,14 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="backdrop-hook"></div>
+    <div id="modal-hook"></div>
     <div id="drawer-hook"></div>
     <div id="root"></div>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAewvABomBGzvpLKZ6OAlT5-uRCr00bynw"
+      async
+      defer
+    ></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
